k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template: #the selector and the label inside the template is how the deployment is going to identify the different parts that it is suppose to manage.
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: tgbkrkmz/multi-client
          ports:
          - containerPort: 3000
