k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template: #the selector and the label inside the template is how the deployment is going to identify the different parts that it is suppose to manage.
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: tgbkrkmz/multi-server
          ports:
          - containerPort: 5000
