k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template: #the selector and the label inside the template is how the deployment is going to identify the different parts that it is suppose to manage.
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: client
          image: tgbkrkmz/multi-worker
